@@ -1,0 +1,25 @@
+From core-user-return-14700-apmail-hadoop-core-user-archive=hadoop.apache.org@hadoop.apache.org Mon Jun 01 04:28:28 2009
+Comments: comments before header to confuse detection
+Content-Type: text/html; charset=utf-8
+Content-Transfer-Encoding: 8bit
+
+<html>
+  <head>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8">
+  </head>
+  <body text="#000000" bgcolor="#FFFFFF">
+    <p>EntÃ£o talvez resolva fazendo uma imagem da partiÃ§Ã£o lÃ³gica apÃ³s
+      bootar o sistema do HD.</p>
+    <p>Daqui a pouco vai aparecer o equivalente da Micrsoft: <a
+        class="moz-txt-link-freetext"
+href="https://technet.microsoft.com/en-us/library/hh831739%28v=ws.11%29.aspx">https://technet.microsoft.com/en-us/library/hh831739(v=ws.11).aspx</a></p>
+    <p>Junto com o ReFS:
+      <a class="moz-txt-link-freetext"
+href="https://docs.microsoft.com/en-us/windows-server/storage/refs/refs-overview">https://docs.microsoft.com/en-us/windows-server/storage/refs/refs-overview</a></p>
+    <p>abs<br>
+    </p>
+    <pre class="moz-signature" cols="72">LuÃ­s Filipe da Cruz Nassif</pre>
+    <pre class="moz-signature" cols="72">-- 
+LuÃ­s Filipe da Cruz Nassif</pre>
+  </body>
+</html>
